// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should throw because of missing variables 1`] = `
"Invalid config provided:
- Invalid value undefined supplied to : NamespaceComponentParams"
`;

exports[`should throw because the namespace name is empty 1`] = `
"Invalid config provided:
- Invalid value \\"\\" supplied to : NamespaceComponentParams.namespace: { name: NonEmptyString }.name: NonEmptyString"
`;
